# wall-idiot

./: .gitignore  Cargo.toml
HACKING/: Dockerfile  build.sh  compile.sh  run.sh
src/: main.rs
