[package]
name = "fuckoff4"
version = "0.1.0"
authors = ["Will Nilges <wdn5796@rit.edu>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43"
anyhow = "1.0.75"
hd44780-driver = "0.4.0"
embedded-hal = "1"
embedded-svc = "0.26.4"
chrono = "0.4.31"
futures = "0.3.29"
embedded-graphics = "0.8"
enumset = "1"
esp-idf-sys = { version = "0.34", features = [ "binstart" ] }
st7920 = { version = "0.4.1", features = [ "graphics" ] }

[build-dependencies]
embuild = "0.31.3"
